更新豆瓣电影数据